--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"gulp-sass": "^3.1.0",
 		"pump": "^1.0.2",
 		"through2": "^2.0.3",
+		"uglifyjs-webpack-plugin": "^1.2.3",
 		"webpack": "3.11.0",
 		"webpack-clear-console": "^1.0.3",
 		"webpack-stream": "^4.0.0"
