--- a/.babelrc
+++ b/.babelrc
@@ -4,19 +4,9 @@
 			"env",
 			{
 				"targets": {
-					"browsers": [
-						"last 2 versions"
-					]
+					"browsers": [ "last 2 versions" ]
 				}
 			}
-		],
-		"react"
-	],
-	"env": {
-		"production": {
-			"plugins": [
-				"transform-react-remove-prop-types"
-			]
-		}
-	}
+		]
+	]
 }
