--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"babel-loader": "^7.1.2",
 		"babel-polyfill": "^6.26.0",
 		"babel-preset-env": "^1.6.0",
+		"eslint": "^4.19.1",
+		"eslint-config-airbnb-base": "^12.1.0",
+		"eslint-plugin-import": "^2.12.0",
 		"gulp": "^3.9.1",
 		"gulp-autoprefixer": "^4.0.0",
 		"gulp-connect": "^5.0.0",
