--- a/package.json
+++ b/package.json
@@ -10,22 +10,29 @@
 		"build:prod": "NODE_ENV=production gulp build"
 	},
 	"devDependencies": {
-		"babel-core": "^6.26.0",
-		"babel-loader": "^7.1.2",
-		"babel-polyfill": "^6.26.0",
-		"babel-preset-env": "^1.6.0",
+		"@babel/core": "^7.1.0",
+		"@babel/plugin-transform-object-assign": "^7.2.0",
+		"@babel/polyfill": "^7.0.0",
+		"@babel/preset-env": "^7.1.0",
+		"@babel/register": "^7.4.4",
+		"babel-loader": "^8.0.2",
+		"del": "^3.0.0",
 		"eslint": "^4.19.1",
 		"eslint-config-airbnb-base": "^12.1.0",
-		"eslint-plugin-import": "^2.12.0",
+		"eslint-plugin-import": "^2.11.0",
 		"gulp": "^3.9.1",
 		"gulp-autoprefixer": "^4.0.0",
 		"gulp-connect": "^5.0.0",
-		"gulp-imagemin": "^3.3.0",
+		"gulp-htmlmin": "^4.0.0",
+		"gulp-imagemin": "^4.1.0",
 		"gulp-pug": "^3.3.0",
 		"gulp-sass": "^3.1.0",
 		"pump": "^1.0.2",
-		"uglifyjs-webpack-plugin": "^1.2.3",
-		"webpack": "3.11.0",
+		"run-sequence": "^2.2.1",
+		"stylelint": "^9.10.1",
+		"stylelint-config-recommended": "^2.1.0",
+		"uglifyjs-webpack-plugin": "^2.0.1",
+		"webpack": "^4.0.0",
 		"webpack-stream": "^4.0.0"
 	}
 }
