--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,6 @@
 {
 	"presets": [
-		[
-			"env",
-			{
-				"targets": {
-					"browsers": [ "last 2 versions" ]
-				}
-			}
-		]
-	]
+		["@babel/preset-env"]
+	],
+	"plugins": ["@babel/plugin-transform-object-assign"]
 }
